--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Leaderboard</h1>
@@ -20,16 +19,13 @@
             </div>
         </div>
         <div class="addScore">
-            <form action="submit" class="addContainer">
+            <form action="submit" class="add-form">
                 <h2 id="addScore">Add your score</h2>
-                <input class="input" type="text" placeholder="Your name">
-                <input class="input" type="text" placeholder="Your score">
-                <div id="submitBtn">
-                    <button id="submit" type="button">Submit</button>
-                </div>
+                <input class="input name" type="text" name="name" placeholder="Your name" required>
+                <input class="input score" type="text" name="score" placeholder="Your score" required>
+                <input id="submit" type="submit" value="Submit">                
             </form>
         </div>
     </div>
-    <script src="./index.js"></script>
 </body>
 </html>
